# myrrh_core_exts

./: BRANCH.md  CHANGELOG.md  COPYRIGHT  MANIFEST.in  README.md  pyproject.toml
src/myrrh/exts/: __version__.py
src/myrrh_exts.egg-info/: PKG-INFO  SOURCES.txt
tests/: hello.py  test_registry.py
